--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,7 +66,7 @@
       </property>
       <widget class="QWidget" name="tabBlocks">
        <attribute name="title">
-        <string>Blocks</string>
+        <string>Sprite Tiles</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
