add darkmode for script display

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -256,16 +256,36 @@
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <widget class="QListWidget" name="lstScripts">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="sizeAdjustPolicy">
-            <enum>QAbstractScrollArea::AdjustToContents</enum>
-           </property>
+          <widget class="QWidget" name="verticalLayoutWidget">
+           <layout class="QVBoxLayout" name="vboxScripts">
+            <item>
+             <widget class="QListWidget" name="lstScripts">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="sizeAdjustPolicy">
+               <enum>QAbstractScrollArea::AdjustToContents</enum>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="hboxScriptColor">
+              <item>
+               <widget class="QLabel" name="lblScriptColor">
+                <property name="text">
+                 <string>Script Color: </string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QComboBox" name="cbxScriptColor"/>
+              </item>
+             </layout>
+            </item>
+           </layout>
           </widget>
           <widget class="QTextBrowser" name="txtScripts">
            <property name="sizePolicy">
