add data length display to texts

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1407,7 +1407,7 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="0">
+             <item row="5" column="0">
               <widget class="QLabel" name="lblTextCompressed">
                <property name="text">
                 <string>Compressed:</string>
@@ -1449,13 +1449,27 @@
                </property>
               </widget>
              </item>
-             <item row="4" column="1">
+             <item row="5" column="1">
               <widget class="QCheckBox" name="chkTextCompressed">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="text">
                 <string/>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="lblTextDataLen">
+               <property name="text">
+                <string>Byte Count:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QLineEdit" name="txtTextDataLen">
+               <property name="readOnly">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
